fix:alignments for big sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,14 +212,17 @@ div #my-read-more {
         margin-top: 10vh;
     }
 
-    /*pyramid image alignment*/
+    /* image alignment*/
     .wrapper img {
         margin-left: 30px;
         margin-right: 30px;
+        justify-content: center;
+        align-items: center;
+        max-width:90%;
     }
     .wrapper iframe {
-    margin: 20px 20px 20px 20px;
-    width: 95vw;
+    margin: 25px 25px 25px 25px;
+    max-width: 100%;
     height: 25vw;
     }
 }
@@ -271,8 +274,8 @@ div #my-read-more {
     .wrapper img {
         padding: 20px 20px 20px 20px;
         margin: 25px 25px 25px 25px;
-        max-width: 45vw;
-        justify-content: space-around;
+        max-width: 95%;
+        justify-content: center;
         align-items: center;
     }
 
@@ -290,7 +293,15 @@ div #my-read-more {
     }
 
     .wrapper img {
+        justify-content: center;
+        align-items: center;
+        max-width:95%;
         margin-left: 50px;
         margin-right: 50px;
     }
+    .wrapper{
+    font-size:1.3rem;
+    margin-left:50px;
+    margin-right:50px;
+}
 }
